Added new properties to properties file for DatabaseSeeder

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 server.servlet.contextPath=/api/v0
 # DataSource: #MONGODB
 spring.data.mongodb.uri=mongodb://localhost:27017/woreto
+# User admin
+miw.admin.email=admin@admin.com
+miw.admin.name=admin
+miw.admin.password=admin
